--- a/index.html
+++ b/index.html
@@ -12,54 +12,67 @@
         <img src="backround.webp" alt="Barbershop Background" class="background">
     </header>
     <main>
+        <!-- About Section -->
+        <section class="about">
+            <h2>About Us</h2>
+            <p>Kids-friendly, sunlit barber's shop specializing in classic cuts and shaves for adults and kids. We pride ourselves on providing exceptional service with a personal touch that keeps customers coming back.</p>
+        </section>
+
+        <!-- Reviews Section -->
         <section class="reviews">
-            <h2>Customer Reviews</h2>
+            <h2>What Our Customers Say</h2>
             <div class="review">
-                <p><strong>Steve:</strong> Excellent barber. Gives exceptional service. Highly recommend.</p>
+                <p><strong>Seann Sackett:</strong> Steve is an excellent barber. Gives exceptional service and a really nice guy. Highly recommend.</p>
             </div>
             <div class="review">
-                <p><strong>Patrick:</strong> A perfect old school barber shop. Fair prices and great cuts.</p>
+                <p><strong>Patrick Richardson:</strong> This is a perfect old school barber shop. Simon is a master of his craft, a real artist. Fair prices and great cuts.</p>
             </div>
             <div class="review">
-                <p><strong>Hector:</strong> Prompt and professional, knowledgeable and skilled. Will be going back soon!</p>
+                <p><strong>Hector The Great:</strong> Prompt and professional, Zach is knowledgeable and skilled at getting my best haircut. Glad doors kept open until posted closing time to accommodate busy schedule.</p>
             </div>
             <div class="review">
-                <p><strong>Paul:</strong> Such a terrific person who takes his time to do your hair right.</p>
+                <p><strong>Paul Deraval:</strong> Simon is a gem. Such a terrific person who takes his time to do your hair right. Meticulous in every way and great conversations.</p>
             </div>
             <div class="review">
-                <p><strong>Michael:</strong> Simon is Number 1! Focused, consistent, and truly talented.</p>
+                <p><strong>Michael Anthony:</strong> Simon is Number 1! He's an old school barber you don't find anymore. He's focused, consistent, and truly talented.</p>
             </div>
             <div class="review">
-                <p><strong>Scott:</strong> Love visiting for a haircut! Great atmosphere and fantastic job.</p>
+                <p><strong>Scott Brekne:</strong> Love visiting Steve and Simon for a haircut! They are meticulous with their cuts. Great atmosphere in the shop and always fun chatting with them.</p>
             </div>
         </section>
+
+        <!-- Services Section -->
         <section class="services">
-            <h2>Services</h2>
+            <h2>Our Services</h2>
             <ul>
                 <li>Haircut</li>
                 <li>Beard Trim</li>
+                <li>Classic Shaves</li>
+                <li>Hot Towel Service</li>
             </ul>
         </section>
-        <section class="contact">
-            <h2>Contact Us</h2>
-            <p>Address: 15 E Main St, Oyster Bay, NY 11771</p>
-            <p>Phone: (516) 802-5300</p>
-            <h3>Hours:</h3>
-            <p>Thursday: 9 AM - 6 PM</p>
-            <p>Friday: 9 AM - 6 PM</p>
-            <p>Saturday: Closed</p>
-            <p>Sunday: 9 AM - 4 PM</p>
-            <p>Monday: 9 AM - 6 PM</p>
-            <p>Tuesday: 9 AM - 6 PM</p>
-            <p>Wednesday: 9 AM - 6 PM</p>
-        </section>
+
+        <!-- Menu Section -->
         <section class="menu">
-            <h2>Menu</h2>
+            <h2>Pricing & Services Menu</h2>
             <img src="menu.webp" alt="Menu" class="menu-image">
+        </section>
+
+        <!-- Contact Section -->
+        <section class="contact">
+            <h2>Get In Touch</h2>
+            <p><strong>📍 Address:</strong> 15 E Main St, Oyster Bay, NY 11771</p>
+            <p><strong>📞 Phone:</strong> (516) 802-5300</p>
+            
+            <h3>Hours of Operation</h3>
+            <p><strong>Monday - Friday:</strong> 9 AM - 6 PM</p>
+            <p><strong>Saturday:</strong> Closed</p>
+            <p><strong>Sunday:</strong> 9 AM - 4 PM</p>
         </section>
     </main>
     <footer>
-        <p>Kids-friendly, sunlit barber's shop specializing in classic cuts and shaves for adults and kids.</p>
+        <p>&copy; 2026 Johnny's Barbershop | 15 E Main St, Oyster Bay, NY 11771 | (516) 802-5300</p>
+        <p>Classic cuts. Professional service. Old-school tradition.</p>
     </footer>
 </body>
 </html>
