Remove booking, appointments, FAQ, and contact form - update homepage background to background.webp

--- a/services.html
+++ b/services.html
@@ -17,7 +17,6 @@
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="services.html" class="nav-link active">Services</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
-                <li><a href="booking.html" class="nav-link cta-btn">Book Now</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
@@ -53,7 +52,6 @@
                             <li>Product recommendations</li>
                         </ul>
                         <p class="price-large">$25 - $35</p>
-                        <a href="booking.html" class="btn btn-primary">Book Haircut</a>
                     </div>
                 </div>
             </div>
@@ -74,7 +72,6 @@
                             <li>Professional grooming advice</li>
                         </ul>
                         <p class="price-large">$15 - $25</p>
-                        <a href="booking.html" class="btn btn-primary">Book Beard Trim</a>
                     </div>
                 </div>
             </div>
@@ -95,8 +92,7 @@
                             <li>Aftershave treatment</li>
                         </ul>
                         <p class="price-large">$20 - $30</p>
-                        <a href="booking.html" class="btn btn-primary">Book Shave</a>
-                    </div>
+                        <a href="booking.html" class="btn bt
                 </div>
             </div>
 
@@ -116,8 +112,7 @@
                             <li>10-15 minutes of relaxation</li>
                         </ul>
                         <p class="price-large">$5 - $10 (Add-on)</p>
-                        <a href="booking.html" class="btn btn-primary">Add to Booking</a>
-                    </div>
+                        <a href="booking.html" class="btn btn-primar
                 </div>
             </div>
         </div>
@@ -195,8 +190,8 @@
         <div class="container">
             <h2>Ready to Experience the Difference?</h2>
             <p>Book your appointment today and join thousands of satisfied customers</p>
-            <a href="booking.html" class="btn btn-primary">Book Now</a>
-        </div>
+            <a Visit us today and join thousands of satisfied customers</p>
+            <a href="contact.html" class="btn btn-primary">Contact Us
     </section>
 
     <!-- Footer -->
