--- a/about.html
+++ b/about.html
@@ -17,7 +17,6 @@
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="services.html" class="nav-link">Services</a></li>
                 <li><a href="about.html" class="nav-link active">About</a></li>
-                <li><a href="booking.html" class="nav-link cta-btn">Book Now</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
@@ -169,7 +168,7 @@
         <div class="container">
             <h2>Experience the Johnny's Difference</h2>
             <p>Visit us today and discover why we're Oyster Bay's favorite barbershop</p>
-            <a href="booking.html" class="btn btn-primary">Book Your Appointment</a>
+            <a href="contact.html" class="btn btn-primary">Get In Touch</a>
         </div>
     </section>
 
