--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,6 @@
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="services.html" class="nav-link">Services</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
-                <li><a href="booking.html" class="nav-link cta-btn">Book Now</a></li>
                 <li><a href="contact.html" class="nav-link active">Contact</a></li>
             </ul>
             <div class="hamburger">
@@ -37,50 +36,8 @@
     <!-- Contact Section -->
     <section class="contact-section">
         <div class="container">
-            <div class="contact-wrapper">
-                <div class="contact-form-wrapper">
-                    <h2>Send us a Message</h2>
-                    <form id="contactForm" class="contact-form">
-                        <div class="form-group">
-                            <label for="contact-name">Your Name *</label>
-                            <input type="text" id="contact-name" name="name" required placeholder="John Doe">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="contact-email">Email Address *</label>
-                            <input type="email" id="contact-email" name="email" required placeholder="john@example.com">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="contact-phone">Phone Number</label>
-                            <input type="tel" id="contact-phone" name="phone" placeholder="(516) 123-4567">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="contact-subject">Subject *</label>
-                            <select id="contact-subject" name="subject" required>
-                                <option value="">Select a subject</option>
-                                <option value="General Inquiry">General Inquiry</option>
-                                <option value="Booking Question">Booking Question</option>
-                                <option value="Service Inquiry">Service Inquiry</option>
-                                <option value="Feedback">Feedback</option>
-                                <option value="Special Event">Special Event Inquiry</option>
-                                <option value="Other">Other</option>
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="contact-message">Message *</label>
-                            <textarea id="contact-message" name="message" required placeholder="Tell us what's on your mind..." rows="6"></textarea>
-                        </div>
-
-                        <button type="submit" class="btn btn-primary full-width">Send Message</button>
-                        <p class="form-note">* Required fields. We'll get back to you within 24 hours.</p>
-                    </form>
-                </div>
-
-                <div class="contact-info-wrapper">
-                    <h2>Contact Information</h2>
+            <div class="contact-info-wrapper">
+                <h2>Contact Information</h2>
                     
                     <div class="info-card">
                         <h3>📍 Visit Us</h3>
@@ -193,3 +150,7 @@
     <script src="main.js"></script>
 </body>
 </html>
+Get In Touch</h2>
+            <p>Reach out with any questions or visit us in person</p>
+            <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
+                <a href="tel:+15168025300" class="btn btn-prim
