--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <li><a href="index.html" class="nav-link active">Home</a></li>
                 <li><a href="services.html" class="nav-link">Services</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
-                <li><a href="booking.html" class="nav-link cta-btn">Book Now</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
@@ -33,14 +32,13 @@
 
     <!-- Hero Section with Background Image -->
     <header class="hero">
-        <div class="hero-background" style="background-image: url('backround.webp')"></div>
+        <div class="hero-background" style="background-image: url('background.webp')"></div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1 class="hero-title">Johnny's Barbershop</h1>
             <p class="hero-subtitle">Classic Cuts & Professional Service Since 1995</p>
             <div class="hero-buttons">
-                <a href="booking.html" class="btn btn-primary">Book An Appointment</a>
-                <a href="contact.html" class="btn btn-secondary">Get In Touch</a>
+                <a href="contact.html" class="btn btn-primary">Get In Touch</a>
             </div>
         </div>
         <div class="scroll-indicator">
@@ -150,8 +148,8 @@
         <div class="container">
             <h2>Ready For Your Next Haircut?</h2>
             <p>Schedule an appointment with one of our expert barbers today</p>
-            <a href="booking.html" class="btn btn-primary">Book Now</a>
-        </div>
+            <a Visit us today for premium barbering services</p>
+            <a href="contact.html" class="btn btn-primary">Contact Us
     </section>
 
     <!-- Contact Preview -->
