Fix contact page layout and improve services page with cleaner card design

--- a/contact.html
+++ b/contact.html
@@ -36,37 +36,28 @@
     <!-- Contact Section -->
     <section class="contact-section">
         <div class="container">
-            <div class="contact-info-wrapper">
-                <h2>Contact Information</h2>
-                    
-                    <div class="info-card">
-                        <h3>📍 Visit Us</h3>
-                        <p>15 E Main Street<br>
-                        Oyster Bay, NY 11771</p>
-                    </div>
+            <div class="contact-grid">
+                <div class="contact-card">
+                    <h3>📍 Visit Us</h3>
+                    <p>15 E Main Street<br>Oyster Bay, NY 11771</p>
+                </div>
 
-                    <div class="info-card">
-                        <h3>📞 Call Us</h3>
-                        <p><a href="tel:+15168025300">(516) 802-5300</a></p>
-                        <p class="small-text">Mon-Fri: 9 AM - 6 PM<br>Sun: 9 AM - 4 PM</p>
-                    </div>
+                <div class="contact-card">
+                    <h3>📞 Call Us</h3>
+                    <p><a href="tel:+15168025300">(516) 802-5300</a></p>
+                    <p class="small-text">Mon-Fri: 9 AM - 6 PM<br>Sun: 9 AM - 4 PM</p>
+                </div>
 
-                    <div class="info-card">
-                        <h3>📧 Email Us</h3>
-                        <p><a href="mailto:info@johnnysbarbershop.com">info@johnnysbarbershop.com</a></p>
-                    </div>
+                <div class="contact-card">
+                    <h3>🕐 Hours</h3>
+                    <p><strong>Mon - Fri:</strong> 9 AM - 6 PM<br>
+                    <strong>Sat:</strong> Closed<br>
+                    <strong>Sun:</strong> 9 AM - 4 PM</p>
+                </div>
 
-                    <div class="info-card">
-                        <h3>🕐 Hours of Operation</h3>
-                        <p><strong>Monday - Friday:</strong><br>9:00 AM - 6:00 PM</p>
-                        <p><strong>Saturday:</strong><br>Closed</p>
-                        <p><strong>Sunday:</strong><br>9:00 AM - 4:00 PM</p>
-                    </div>
-
-                    <div class="info-card">
-                        <h3>💬 Message us Anytime</h3>
-                        <p>Fill out the form and we'll respond within 24 business hours. Or call us during business hours for immediate assistance.</p>
-                    </div>
+                <div class="contact-card">
+                    <h3>📧 Email</h3>
+                    <p><a href="mailto:info@johnnysbarbershop.com">info@johnnysbarbershop.com</a></p>
                 </div>
             </div>
         </div>
@@ -82,26 +73,26 @@
         </div>
     </section>
 
-    <!-- Why Contact Us -->
+    <!-- Why Reach Out -->
     <section class="why-contact">
         <div class="container">
-            <h2>Why Reach Out?</h2>
+            <h2>Why Visit Johnny's?</h2>
             <div class="reasons-grid">
                 <div class="reason-card">
-                    <h3>Questions About Services</h3>
-                    <p>Need to know more about what we offer? Get detailed information about our services and pricing.</p>
+                    <h3>🎯 Expert Barbers</h3>
+                    <p>Master craftsmen with decades of experience in classic and modern barbering techniques.</p>
                 </div>
                 <div class="reason-card">
-                    <h3>Special Requests</h3>
-                    <p>Have a special event or unique request? Let us know and we'll do our best to accommodate you.</p>
+                    <h3>✨ Premium Service</h3>
+                    <p>Personalized attention, quality tools, and premium products for the best results.</p>
                 </div>
                 <div class="reason-card">
-                    <h3>Share Feedback</h3>
-                    <p>Your feedback helps us improve. Tell us about your experience and what we can do better.</p>
+                    <h3>🏪 Welcoming Atmosphere</h3>
+                    <p>A warm, professional environment where every customer feels like family.</p>
                 </div>
                 <div class="reason-card">
-                    <h3>Booking Issues</h3>
-                    <p>Having trouble booking online? Our team can help you find the perfect appointment time.</p>
+                    <h3>💰 Fair Pricing</h3>
+                    <p>Transparent pricing with no hidden fees. Quality service at honest prices.</p>
                 </div>
             </div>
         </div>
@@ -110,12 +101,9 @@
     <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
-            <h2>Ready to Schedule?</h2>
-            <p>Book your appointment now or reach out with any questions</p>
-            <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
-                <a href="booking.html" class="btn btn-primary">Book Appointment</a>
-                <a href="tel:+15168025300" class="btn btn-secondary">Call Us</a>
-            </div>
+            <h2>Ready to Visit?</h2>
+            <p>Stop by today and experience our exceptional service</p>
+            <a href="tel:+15168025300" class="btn btn-primary">Call Now</a>
         </div>
     </section>
 
