--- a/services.html
+++ b/services.html
@@ -34,152 +34,89 @@
     </div>
 
     <!-- Services Section -->
-    <section class="services-detailed">
+    <section class="featured-services">
         <div class="container">
-            <div class="service-detail">
-                <h2>Haircut & Styling</h2>
-                <div class="service-content">
-                    <div class="service-image">
-                        <div class="placeholder-image">✂</div>
+            <h2>Our Services</h2>
+            <p class="section-subtitle">Expert barbering for every style and need</p>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-icon">✂</div>
+                    <h3>Haircut & Styling</h3>
+                    <p>Professional cuts from classic fades to modern styles. Personalized consultation for your perfect look.</p>
+                    <div class="service-features">
+                        <span>✓ Consultation</span>
+                        <span>✓ Premium tools</span>
+                        <span>✓ Styling tips</span>
                     </div>
-                    <div class="service-description">
-                        <p>Our expert barbers specialize in a wide variety of haircuts from classic fades to modern styles. We take time to understand your preferences and face shape to create the perfect cut tailored just for you.</p>
-                        <h3>What's Included:</h3>
-                        <ul>
-                            <li>Professional hair consultation</li>
-                            <li>Precision cutting with premium tools</li>
-                            <li>Styling and finishing touches</li>
-                            <li>Product recommendations</li>
-                        </ul>
-                        <p class="price-large">$25 - $35</p>
-                    </div>
+                    <p class="price">$25 - $35</p>
                 </div>
-            </div>
 
-            <div class="service-detail">
-                <h2>Beard Trim & Grooming</h2>
-                <div class="service-content">
-                    <div class="service-image">
-                        <div class="placeholder-image">🧔</div>
+                <div class="service-card">
+                    <div class="service-icon">🧔</div>
+                    <h3>Beard Trim & Grooming</h3>
+                    <p>Keep your beard sharp and well-maintained. Expert shaping with precision trimming and finishing.</p>
+                    <div class="service-features">
+                        <span>✓ Shape & trim</span>
+                        <span>✓ Neckline cleanup</span>
+                        <span>✓ Beard oil</span>
                     </div>
-                    <div class="service-description">
-                        <p>Keep your beard looking sharp and well-maintained. Our barbers use precision techniques to shape and trim your beard while maintaining the health and thickness you desire.</p>
-                        <h3>What's Included:</h3>
-                        <ul>
-                            <li>Beard shape and trim</li>
-                            <li>Neck line cleanup</li>
-                            <li>Beard oil application</li>
-                            <li>Professional grooming advice</li>
-                        </ul>
-                        <p class="price-large">$15 - $25</p>
-                    </div>
+                    <p class="price">$15 - $25</p>
                 </div>
-            </div>
 
-            <div class="service-detail">
-                <h2>Classic Straight Razor Shave</h2>
-                <div class="service-content">
-                    <div class="service-image">
-                        <div class="placeholder-image">🪒</div>
+                <div class="service-card">
+                    <div class="service-icon">🪒</div>
+                    <h3>Classic Straight Razor Shave</h3>
+                    <p>Traditional luxury shave experience. Hot towel service with master barber technique for the closest shave.</p>
+                    <div class="service-features">
+                        <span>✓ Hot towel prep</span>
+                        <span>✓ Straight razor</span>
+                        <span>✓ Aftershave</span>
                     </div>
-                    <div class="service-description">
-                        <p>Experience the luxury of a traditional straight razor shave with premium hot towel service. Our master barbers use techniques passed down through generations to give you the closest, most comfortable shave possible.</p>
-                        <h3>What's Included:</h3>
-                        <ul>
-                            <li>Hot towel pre-shave preparation</li>
-                            <li>Premium shaving cream application</li>
-                            <li>Master straight razor shaving</li>
-                            <li>Aftershave treatment</li>
-                        </ul>
-                        <p class="price-large">$20 - $30</p>
-                        <a href="booking.html" class="btn bt
+                    <p class="price">$20 - $30</p>
                 </div>
-            </div>
 
-            <div class="service-detail">
-                <h2>Hot Towel & Relaxation Service</h2>
-                <div class="service-content">
-                    <div class="service-image">
-                        <div class="placeholder-image">✨</div>
+                <div class="service-card">
+                    <div class="service-icon">✨</div>
+                    <h3>Hot Towel Service</h3>
+                    <p>Relaxing hot towel treatment that opens pores and softens facial hair. Perfect complement to any service.</p>
+                    <div class="service-features">
+                        <span>✓ Heated towel</span>
+                        <span>✓ Aromatherapy</span>
+                        <span>✓ 10-15 mins</span>
                     </div>
-                    <div class="service-description">
-                        <p>Add luxury to any service with our signature hot towel treatment. Perfect for opening pores, softening facial hair, and providing a spa-like relaxation experience right at the barbershop.</p>
-                        <h3>What's Included:</h3>
-                        <ul>
-                            <li>Premium heated towel treatment</li>
-                            <li>Facial skin preparation</li>
-                            <li>Aromatherapy benefits</li>
-                            <li>10-15 minutes of relaxation</li>
-                        </ul>
-                        <p class="price-large">$5 - $10 (Add-on)</p>
-                        <a href="booking.html" class="btn btn-primar
+                    <p class="price">$5 - $10</p>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Combo Deals -->
-    <section class="combo-deals">
-        <div class="container">
-            <h2>Special Combo Deals</h2>
-            <p class="section-subtitle">Save more with our package offers</p>
-            <div class="deals-grid">
-                <div class="deal-card">
-                    <h3>The Classic</h3>
-                    <p>Haircut + Hot Towel Service</p>
-                    <p class="deal-price">$30</p>
-                    <p class="deal-savings">Save $5</p>
-                </div>
-                <div class="deal-card">
-                    <h3>The Executive</h3>
-                    <p>Haircut + Beard Trim + Hot Towel</p>
-                    <p class="deal-price">$55</p>
-                    <p class="deal-savings">Save $10</p>
-                </div>
-                <div class="deal-card">
-                    <h3>The Ultimate</h3>
-                    <p>Haircut + Shave + Hot Towel + Beard Trim</p>
-                    <p class="deal-price">$75</p>
-                    <p class="deal-savings">Save $15</p>
-                </div>
-                <div class="deal-card">
-                    <h3>Kids Special</h3>
-                    <p>Haircut for Kids (Under 12)</p>
-                    <p class="deal-price">$15</p>
-                    <p class="deal-savings">-</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Why Choose Us -->
     <section class="why-choose">
         <div class="container">
             <h2>Why Choose Johnny's Barbershop?</h2>
             <div class="reasons-grid">
                 <div class="reason-card">
-                    <h3>Expert Barbers</h3>
-                    <p>Master craftsmen with 30+ years of combined experience</p>
+                    <h3>🎯 Expert Barbers</h3>
+                    <p>Master craftsmen with decades of combined barbering experience</p>
                 </div>
                 <div class="reason-card">
-                    <h3>Premium Tools</h3>
-                    <p>Using only the finest professional barbering equipment</p>
+                    <h3>✨ Premium Quality</h3>
+                    <p>Using only the finest professional barbering equipment and products</p>
                 </div>
                 <div class="reason-card">
-                    <h3>Relaxing Atmosphere</h3>
-                    <p>A welcoming space designed for comfort and conversation</p>
+                    <h3>😌 Relaxing Atmosphere</h3>
+                    <p>A welcoming space designed for comfort and great conversation</p>
                 </div>
                 <div class="reason-card">
-                    <h3>Family Friendly</h3>
+                    <h3>👨‍👧‍👦 Family Friendly</h3>
                     <p>Services for adults and kids in a warm, professional setting</p>
                 </div>
                 <div class="reason-card">
-                    <h3>Fair Pricing</h3>
+                    <h3>💰 Fair Pricing</h3>
                     <p>Transparent pricing with no hidden fees or surprises</p>
                 </div>
                 <div class="reason-card">
-                    <h3>Walk-ins Welcome</h3>
-                    <p>Come by anytime, or book ahead for preferred time slots</p>
+                    <h3>🚶 Walk-ins Welcome</h3>
+                    <p>Come by anytime during business hours. No appointment necessary</p>
                 </div>
             </div>
         </div>
@@ -188,10 +125,10 @@
     <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
-            <h2>Ready to Experience the Difference?</h2>
-            <p>Book your appointment today and join thousands of satisfied customers</p>
-            <a Visit us today and join thousands of satisfied customers</p>
-            <a href="contact.html" class="btn btn-primary">Contact Us
+            <h2>Ready to Visit?</h2>
+            <p>Stop by Johnny's Barbershop and experience exceptional service</p>
+            <a href="contact.html" class="btn btn-primary">Contact Us</a>
+        </div>
     </section>
 
     <!-- Footer -->
